[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Moha-AlHanbali <moha.alhanbali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
black = "^21.9b0"
jupyterlab = "^3.2.1"
sklearn = "^0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
